# ml-movie-recommender

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml
conf/data_extraction/: extraction.yml
data/: feature_store.sqlite
data/01_raw/: movies_dataset_2025-05-07.parquet  movies_dataset_2025-05-11.parquet  movies_dataset_2025-05-12.parquet
data/02_intermediate/: movies_dataset_fixed.parquet
notebooks/: README.md  notebook_template.ipynb
notebooks/1-data/: extraction.ipynb
notebooks/2-exploration/: exploration.ipynb
notebooks/3-analysis/: bivariate_data_analysis.ipynb
notebooks/4-feat_eng/: feature_eng.ipynb
notebooks/5-models/: base_model.ipynb  model_selection.ipynb
notebooks/6-interpretation/: model_interpretation.ipynb
src/pipelines/feature_pipeline/: movies_client.py  pipeline.py
src/pipelines/training_pipeline/: movie_feature_preprocessor.py  pipeline.py
src/utils/: arg_parser.py  feature_store_interface.py  hopsworks_conn.py  recommender_models.py  sqlite_conn.py
tests/pipelines/feature_pipeline/: test_movies_client.py  test_pipeline.py
